add problem config file parser

--- a/src/sample.cfg
+++ b/src/sample.cfg
@@ -1,5 +1,12 @@
-title=A+B
-score=100
-time=100
-
+title: A+B
+testpoint: 10
+time: 1000MS
+memory: 256MB
+spj: ·ñ
+part: ·ñ
+type: ´«Í³ÐÍ
+codelen: 10KB
+isuf: in
+osuf: out
+add: ·ñ
 
