--- a/src/sample.cfg
+++ b/src/sample.cfg
@@ -2,11 +2,11 @@ title: A+B
 testpoint: 10
 time: 1000MS
 memory: 256MB
-spj: ·ñ
-part: ·ñ
-type: ´«Í³ÐÍ
+spj: Yes
+part: No
+type: Conventional
 codelen: 10KB
 isuf: in
 osuf: out
-add: ·ñ
+add: Yes
 
